Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-23109

Incorrect StoredValue size calculations

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 5.0.0
    • 5.0.0
    • couchbase-bucket
    • None
    • Untriaged
    • Unknown

    Description

      A number of the methods to calculate the sizes of StoredValue objects are incorrect - they over-report the size needed.

      These issues appear to be introduced in Spock development, during changes to add SerializedDocKey (for collections).

      Attachments

        For Gerrit Dashboard: MB-23109
        # Subject Branch Project Status CR V

        Activity

          People

            drigby Dave Rigby (Inactive)
            drigby Dave Rigby (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty