MB-23109: Fix StoredValue size calculations

A number of the methods to calculate the sizes of StoredValue objects
are incorrect - they over-report the size needed.  These issues appear
to be introduced in Spock development, during changes to add
SerializedDocKey (for collections).

Fix them, and enable unit tests to defend against any future issues.

Change-Id: I92f1eefaeb74cb14f83c432563a670caf7c8723b
Reviewed-on: http://review.couchbase.org/74523
Reviewed-by: Manu Dhundi <manu@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>